--- a/_posts/2020-09-27-11.markdown
+++ b/_posts/2020-09-27-11.markdown
@@ -9,20 +9,20 @@ use_math: true
 # 스트레스를 바라보는 시각
 
 
-![ ](https://raw.githubusercontent.com/bocastle/bocastle.github.io/master/images/1.jpg/800x400)
+![stress1](https://raw.githubusercontent.com/bocastle/bocastle.github.io/master/images/1.jpg/800x400)
 
-![ ](https://raw.githubusercontent.com/bocastle/bocastle.github.io/master/images/2.jpg/800x400)
+![stress2](https://raw.githubusercontent.com/bocastle/bocastle.github.io/master/images/2.jpg/800x400)
 
-![ ](https://raw.githubusercontent.com/bocastle/bocastle.github.io/master/images/3.jpg/800x400)
+![stress3](https://raw.githubusercontent.com/bocastle/bocastle.github.io/master/images/3.jpg/800x400)
 
-![ ](https://raw.githubusercontent.com/bocastle/bocastle.github.io/master/images/4.jpg/800x400)
+![stress4](https://raw.githubusercontent.com/bocastle/bocastle.github.io/master/images/4.jpg/800x400)
 
-![ ](https://raw.githubusercontent.com/bocastle/bocastle.github.io/master/images/5.jpg/800x400)
+![stress5](https://raw.githubusercontent.com/bocastle/bocastle.github.io/master/images/5.jpg/800x400)
 
-![ ](https://raw.githubusercontent.com/bocastle/bocastle.github.io/master/images/6.jpg/800x400)
+![stress6](https://raw.githubusercontent.com/bocastle/bocastle.github.io/master/images/6.jpg/800x400)
 
-![ ](https://raw.githubusercontent.com/bocastle/bocastle.github.io/master/images/7.jpg/800x400)
+![stress7](https://raw.githubusercontent.com/bocastle/bocastle.github.io/master/images/7.jpg/800x400)
 
-![ ](https://raw.githubusercontent.com/bocastle/bocastle.github.io/master/images/8.jpg/800x400)
+![stress8](https://raw.githubusercontent.com/bocastle/bocastle.github.io/master/images/8.jpg/800x400)
 
-![ ](https://raw.githubusercontent.com/bocastle/bocastle.github.io/master/images/9.jpg/800x400)
+![stress9](https://raw.githubusercontent.com/bocastle/bocastle.github.io/master/images/9.jpg/800x400)
